2006-04-27  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Version bump: 1.0.4

2006-04-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* greeter/verify.c: 
	<http://bugs.opensolaris.org/bugdatabase/view_bug.do?bug_id=6413255>
	Sun bug #6413255: xdm should check for uid 0, not for username of 
	"root", when doing non-console login check

2006-04-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Add AC_C_INLINE so we can use "inline" keyword

	* greeter/Login.c: 
	Add "inline" to max function definition

2006-04-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* greeter/Login.c: 
	When clearing username & password buffers, zero out the entire buffer,
	not just the first byte, for reduced risk of leaking passwords into
	core dumps.

2006-04-07  Alan Coopersmith  <alan.coopersmith@sun.com>

	* session.c: 
	Xorg bug #4765 <https://bugs.freedesktop.org/show_bug.cgi?id=4765>
	Patch #3555 <https://bugs.freedesktop.org/attachment.cgi?id=3555>
	xdm doesn't work with the pam_krb5 module (call pam_getenvlist
	after pam_setcred)  (Constantine Sapuntzakis)

2006-03-30  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	Version bump: 1.0.3

2006-03-30  Alan Coopersmith  <alan.coopersmith@sun.com>
	
	* daemon.c:
	* util.c:
	Drop all setpgrp/setpgid silliness and just use setsid everywhere.
	(Assumes all platforms are at least POSIX.1-1990 compliant.)

	* daemon.c:
	Check for error return from daemon() function.

2006-03-27  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Version bump: 1.0.2

2006-03-17  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* config/Xsession.cpp: 
	* config/Makefile.am:
	Bug #5898 <https://bugs.freedesktop.org/show_bug.cgi?id=5898>
	Use mktemp command to create files safely in TMPDIR or /tmp
	on systems that have it - don't try to create files there if
	mktemp is not present.   Fix based on NetBSD fix from