@@ -1,3 +1,8 @@
+2006-06-20  Matthieu Herrb <matthieu.herrb@laas.fr>
+	* session.c:
+	* xdmshell.c:
+	Check setuid() return value. Bugzilla #7116.
+
 2006-04-27  Alan Coopersmith  <alan.coopersmith@sun.com>
 
 	* configure.ac: 
